<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:layout_margin="@dimen/app_margin"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="@dimen/main_img_size"
            android:layout_height="@dimen/main_img_size"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/weightlogo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_taille_label"
                android:gravity="center"
                android:layout_margin="@dimen/main_label_size"
                android:padding="20dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_taille_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:hint="@string/main_taille_hint"
            app:suffixText="cm">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/main_taille_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:inputType="number"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_poids_label"
            android:gravity="center"
            android:layout_margin="@dimen/main_label_size"
            android:padding="20dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_poid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:hint="@string/main_poid_hint"
            app:suffixText="kg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/main_poid_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="number"
                android:maxLines="1"
                android:textAlignment="center"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/main_bt_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">


        <Button
            android:id="@+id/main_calcul_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_calcul_bt"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/main_cancel_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_cancel_bt"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@id/main_calcul_bt"

            />

    </RelativeLayout>
</LinearLayout>

