<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/result_ecran"
        android:layout_margin="@dimen/app_margin"
        android:layout_weight="1"
        android:gravity="center"/>

        <TextView
            android:id="@+id/result_imc_value_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/result_valeur_imc"
            android:layout_margin="@dimen/app_margin"
            android:layout_weight="2"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/result_imc_text_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/result_text_imc"
            android:layout_margin="@dimen/app_margin"
            android:layout_weight="1"
            android:gravity="center"/>

    </LinearLayout>
</LinearLayout>